--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       </p>
       <!-- إضافة صورة توضيحية -->
       <div class="img-gallery">
-        <img src="https://via.placeholder.com/300x200?text=صورة+جلدية+1" alt="صورة توضيحية للفطريات الجلدية">
+        <img src=><img src="//upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Teigne_tondante_enfant.jpg/220px-Teigne_tondante_enfant.jpg" decoding="async" width="220" height="210" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Teigne_tondante_enfant.jpg/330px-Teigne_tondante_enfant.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Teigne_tondante_enfant.jpg/440px-Teigne_tondante_enfant.jpg 2x" data-file-width="2910" data-file-height="2777">
         <img src="https://via.placeholder.com/300x200?text=صورة+جلدية+2" alt="صورة توضيحية للفطريات الجلدية">
       </div>
     </section>
