--- a/index.html
+++ b/index.html
@@ -218,6 +218,8 @@
             border-radius: 15px;
             overflow: hidden;
             transition: var(--transition);
+            border: 2px solid #fff;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
         }
         figure.gallery-item:hover {
             transform: perspective(1000px) rotateY(5deg) scale(1.05);
@@ -264,6 +266,16 @@
             transform: translateY(-5px);
         }
 
+        /* تذييل الموقع */
+        footer {
+            background: var(--primary);
+            color: white;
+            text-align: center;
+            padding: 1rem 0;
+            font-size: 1rem;
+            margin-top: 3rem;
+        }
+
         @media (max-width: 768px) {
             .container {
                 padding: 1rem;
@@ -308,11 +320,11 @@
             </p>
             <div class="gallery-grid">
                 <figure class="gallery-item">
-                    <img src="images/skin1.jpg" alt="فطريات جلدية 1">
+                    <img src="//upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Trichophyton_rubrum_var_rodhaini.jpg/220px-Trichophyton_rubrum_var_rodhaini.jpg" alt="فطريات جلدية 1">
                     <figcaption>فطريات جلدية 1 - Mostafa Shaker</figcaption>
                 </figure>
                 <figure class="gallery-item">
-                    <img src="images/skin2.jpg" alt="فطريات جلدية 2">
+                    <img src="//upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Microsporum_canis_1.JPG/220px-Microsporum_canis_1.JPG" alt="فطريات جلدية 2">
                     <figcaption>فطريات جلدية 2 - Mostafa Shaker</figcaption>
                 </figure>
             </div>
@@ -355,11 +367,11 @@
                     </ul>
                     <div class="gallery-grid">
                         <figure class="gallery-item">
-                            <img src="images/head1.jpg" alt="سعفة الرأس 1">
+                            <img src="//upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Teigne_tondante_enfant.jpg/220px-Teigne_tondante_enfant.jpg" alt="سعفة الرأس 1">
                             <figcaption>سعفة الرأس 1 - Mostafa Shaker</figcaption>
                         </figure>
                         <figure class="gallery-item">
-                            <img src="images/head2.jpg" alt="سعفة الرأس 2">
+                            <img src="//upload.wikimedia.org/wikipedia/commons/thumb/9/99/Sequeira_Plate_15.jpg/220px-Sequeira_Plate_15.jpg" alt="سعفة الرأس 2">
                             <figcaption>سعفة الرأس 2 - Mostafa Shaker</figcaption>
                         </figure>
                     </div>
@@ -381,11 +393,11 @@
                     </ul>
                     <div class="gallery-grid">
                         <figure class="gallery-item">
-                            <img src="images/body1.jpg" alt="سعفة الجسد 1">
+                            <img src="//upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Ringworm_on_the_arm%2C_or_tinea_corporis_due_to_Trichophyton_mentagrophytes_PHIL_2938_lores.jpg/220px-Ringworm_on_the_arm%2C_or_tinea_corporis_due_to_Trichophyton_mentagrophytes_PHIL_2938_lores.jpg" alt="سعفة الجسد 1">
                             <figcaption>سعفة الجسد 1 - Mostafa Shaker</figcaption>
                         </figure>
                         <figure class="gallery-item">
-                            <img src="images/body2.jpg" alt="سعفة الجسد 2">
+                            <img src="//upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Sequeira_Plate_12.jpg/186px-Sequeira_Plate_12.jpg" alt="سعفة الجسد 2">
                             <figcaption>سعفة الجسد 2 - Mostafa Shaker</figcaption>
                         </figure>
                     </div>
@@ -406,11 +418,11 @@
                     </ul>
                     <div class="gallery-grid">
                         <figure class="gallery-item">
-                            <img src="images/foot1.jpg" alt="سعفة القدم 1">
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUxERcDU5ibOMMgobXE1xxM5uV2KPcDvx1fA&amp;s" alt="سعفة القدم 1">
                             <figcaption>سعفة القدم 1 - Mostafa Shaker</figcaption>
                         </figure>
                         <figure class="gallery-item">
-                            <img src="images/foot2.jpg" alt="سعفة القدم 2">
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRhMziN1dKSE787M4Nn2P2EtMWH-I4BLgGhw&amp;s" alt="سعفة القدم 2">
                             <figcaption>سعفة القدم 2 - Mostafa Shaker</figcaption>
                         </figure>
                     </div>
@@ -433,11 +445,11 @@
                     </ul>
                     <div class="gallery-grid">
                         <figure class="gallery-item">
-                            <img src="images/thigh1.jpg" alt="سعفة الأرفاغ 1">
+                            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjwQoELj44xW_jKdAFY3k9zzBH75ZhP0PWbRZ_lqHGB-QB47UdtTDmIICAcpXV5E7u5UwDTvk8kmlVc4VwyL6kUMPVA7wYBPsiW6oCLjIOaj5Nr8xuq9RMyRPpKxh_2KJVXCHWDvP8Cnlwu/w320-h195/%25D8%25AD%25D9%2585%25D8%25A7%25D9%2585%25D9%258A+%25D8%25A7%25D9%2584%25D8%25A7%25D8%25B1%25D9%2581%25D8%25A7%25D8%25BA+%25D9%2588%25D8%25AF%25D8%25A7%25D8%25A1+%25D8%25A7%25D9%2584%25D9%2585%25D8%25A8%25D9%258A%25D8%25B6%25D8%25A7%25D8%25AA..+%25D9%2584%25D9%2588%25D9%2586+%25D8%25A3%25D8%25AD%25D9%2585%25D8%25B1+%25D8%25AC%25D9%2588%25D8%25B1%25D9%258A+%25D8%25A8%25D8%25A3%25D8%25B4%25D8%25B9%25D8%25A9+%25D9%2588%25D9%2588%25D8%25AF.+%25D8%25A7%25D9%2584%25D9%2581%25D8%25AD%25D8%25B5+%25D8%25A7%25D9%2584%25D9%2585%25D8%25AC%25D9%2587%25D8%25B1%25D9%258A+%25D9%2584%25D9%2583%25D8%25B4%25D8%25A7%25D8%25B7%25D8%25A9+%25D9%2585%25D9%2586+%25D8%25A7%25D9%2584%25D8%25A2%25D9%2581%25D8%25A9+%25D8%25AA%25D8%25A8%25D8%25AF%25D9%258A+%25D8%25A7%25D9%2584%25D8%25AC%25D8%25B1%25D8%25A7%25D8%25AB%25D9%258A%25D9%2585+%25D8%25A7%25D9%2584%25D9%2585%25D8%25B3%25D8%25A8%25D8%25A8%25D8%25A9.jpg" alt="سعفة الأرفاغ 1">
                             <figcaption>سعفة الأرفاغ 1 - Mostafa Shaker</figcaption>
                         </figure>
                         <figure class="gallery-item">
-                            <img src="images/thigh2.jpg" alt="سعفة الأرفاغ 2">
+                            <img src="//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Tinea_cruris.jpg/250px-Tinea_cruris.jpg" alt="سعفة الأرفاغ 2">
                             <figcaption>سعفة الأرفاغ 2 - Mostafa Shaker</figcaption>
                         </figure>
                     </div>
@@ -464,11 +476,11 @@
                     </ul>
                     <div class="gallery-grid">
                         <figure class="gallery-item">
-                            <img src="images/nail1.jpg" alt="سعفة الأظافر 1">
+                            <img src="//upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Oncymycosis.JPG/250px-Oncymycosis.JPG" alt="سعفة الأظافر 1">
                             <figcaption>سعفة الأظافر 1 - Mostafa Shaker</figcaption>
                         </figure>
                         <figure class="gallery-item">
-                            <img src="images/nail2.jpg" alt="سعفة الأظافر 2">
+                            <img src="https://media.gemini.media/img/portrait/2017/6/6/2017_6_6_10_56_32_45.jpg" alt="سعفة الأظافر 2">
                             <figcaption>سعفة الأظافر 2 - Mostafa Shaker</figcaption>
                         </figure>
                     </div>
@@ -490,12 +502,8 @@
                     </ul>
                     <div class="gallery-grid">
                         <figure class="gallery-item">
-                            <img src="images/face1.jpg" alt="سعفة الوجه 1">
+                            <img src="//upload.wikimedia.org/wikipedia/commons/thumb/2/22/Tinea_barbae_4807_lores.jpg/220px-Tinea_barbae_4807_lores.jpg" alt="سعفة الوجه 1">
                             <figcaption>سعفة الوجه 1 - Mostafa Shaker</figcaption>
-                        </figure>
-                        <figure class="gallery-item">
-                            <img src="images/face2.jpg" alt="سعفة الوجه 2">
-                            <figcaption>سعفة الوجه 2 - Mostafa Shaker</figcaption>
                         </figure>
                     </div>
                 </div>
@@ -516,12 +524,12 @@
                     </ul>
                     <div class="gallery-grid">
                         <figure class="gallery-item">
-                            <img src="images/beard1.jpg" alt="سعفة اللحية 1">
-                            <figcaption>سعفة اللحية 1 - Mostafa Shaker</figcaption>
+                            <img src="images/no.jpg" alt="تينيا اللحية">
+                            <figcaption>تينيا اللحية - Mostafa Shaker</figcaption>
                         </figure>
                         <figure class="gallery-item">
-                            <img src="images/beard2.jpg" alt="سعفة اللحية 2">
-                            <figcaption>سعفة اللحية 2 - Mostafa Shaker</figcaption>
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXg6-p2PhldTs03AnMYmEkNo2mTWKgIfZ0hw&amp;s" alt="صلع اللحية.. الأعراض والعلاج المناسب">
+                            <figcaption>صلع اللحية - Mostafa Shaker</figcaption>
                         </figure>
                     </div>
                 </div>
@@ -583,6 +591,11 @@
             <p><strong>طلاء الأظافر:</strong> سيكلوبيروكس يُستخدم يوميًا لمدة 6-12 شهر (فعالية محدودة).</p>
         </div>
     </div>
+
+    <!-- تذييل الموقع -->
+    <footer>
+        © 2023 Mostafa shaker.NA
+    </footer>
 
     <script>
         function toggleAccordion(element) {
