--- a/index.html
+++ b/index.html
@@ -441,14 +441,9 @@
                         <li>الشعور بالحرقة خاصة عند التعرق أو الاحتكاك.</li>
                         <li>تفاقم الأعراض مع الرطوبة في الطقس الحار.</li>
                     </ul>
-                    <div class="gallery-grid">
-                        <figure class="gallery-item">
-                            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjwQoELj44xW_jKdAFY3k9zzBH75ZhP0PWbRZ_lqHGB-QB47UdtTDmIICAcpXV5E7u5UwDTvk8kmlVc4VwyL6kUMPVA7wYBPsiW6oCLjIOaj5Nr8xuq9RMyRPpKxh_2KJVXCHWDvP8Cnlwu/w320-h195/%25D8%25AD%25D9%2585%25D8%25A7%25D9%2585%25D9%258A+%25D8%25A7%25D9%2584%25D8%25A7%25D8%25B1%25D9%2581%25D8%25A7%25D8%25BA+%25D9%2588%25D8%25AF%25D8%25A7%25D8%25A1+%25D8%25A7%25D9%2584%25D9%2585%25D8%25A8%25D9%258A%25D8%25B6%25D8%25A7%25D8%25AA..+%25D9%2584%25D9%2588%25D9%2586+%25D8%25A3%25D8%25AD%25D9%2585%25D8%25B1+%25D8%25AC%25D9%2588%25D8%25B1%25D9%258A+%25D8%25A8%25D8%25A3%25D8%25B4%25D8%25B9%25D8%25A9+%25D9%2588%25D9%2588%25D8%25AF.+%25D8%25A7%25D9%2584%25D9%2581%25D8%25AD%25D8%25B5+%25D8%25A7%25D9%2584%25D9%2585%25D8%25AC%25D9%2587%25D8%25B1%25D9%258A+%25D9%2584%25D9%2583%25D8%25B4%25D8%25A7%25D8%25B7%25D8%25A9+%25D9%2585%25D9%2586+%25D8%25A7%25D9%2584%25D8%25A2%25D9%2581%25D8%25A9+%25D8%25AA%25D8%25A8%25D8%25AF%25D9%258A+%25D8%25A7%25D9%2584%25D8%25AC%25D8%25B1%25D8%25A7%25D8%25AB%25D9%258A%25D9%2585+%25D8%25A7%25D9%2584%25D9%2585%25D8%25B3%25D8%25A8%25D8%25A8%25D8%25A9.jpg" alt="سعفة الأرفاغ 1">
-                            <figcaption>سعفة الأرفاغ 1 </figcaption>
-                        </figure>
                         <figure class="gallery-item">
                             <img src="//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Tinea_cruris.jpg/250px-Tinea_cruris.jpg" alt="سعفة الأرفاغ 2">
-                            <figcaption>سعفة الأرفاغ 2 </figcaption>
+                            <figcaption>سعفة الأرفاغ  </figcaption>
                         </figure>
                     </div>
                 </div>
