--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
                         <li>الشعور بالحرقة خاصة عند التعرق أو الاحتكاك.</li>
                         <li>تفاقم الأعراض مع الرطوبة في الطقس الحار.</li>
                     </ul>
+                     <div class="gallery-grid">
                         <figure class="gallery-item">
                             <img src="//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Tinea_cruris.jpg/250px-Tinea_cruris.jpg" alt="سعفة الأرفاغ 2">
                             <figcaption>سعفة الأرفاغ  </figcaption>
