--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
       <div class="gallery-grid">
         <figure class="gallery-item">
           <img src="//upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Trichophyton_rubrum_var_rodhaini.jpg/220px-Trichophyton_rubrum_var_rodhaini.jpg" alt="فطريات جلدية 1">
-          <figcaption>تصوير ميكروسكوبي للفطريات</figcaption>
+          <figcaption>تصوير ميكروسكوبي </figcaption>
         </figure>
         <figure class="gallery-item">
           <img src="//upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Microsporum_canis_1.JPG/220px-Microsporum_canis_1.JPG" alt="فطريات جلدية 2">
-          <figcaption>عدوى جلدية شائعة</figcaption>
+          <figcaption>تصوير ميكروسكوبي</figcaption>
         </figure>
       </div>
     </div>
@@ -440,36 +440,36 @@
         </div>
       </div>
       <!-- سعفة الأظافر -->
-      <div class="accordion-item">
-        <div class="accordion-header" onclick="toggleAccordion(this)">
-          <span><i class="fas fa-file-alt"></i> سعفة الأظافر</span>
-          <i class="fas fa-chevron-down accordion-icon" style="transform: rotate(0deg);"></i>
-        </div>
-        <div class="accordion-content">
-          <p><strong>التطور التدريجي:</strong></p>
-          <ul>
-            <li>مرحلة مبكرة: بقع بيضاء أو صفراء على طرف الظفر.</li>
-            <li>مرحلة متقدمة:
-              <ul>
-                <li>تغير لون الظفر إلى بني أو أسود.</li>
-                <li>تثخّن الظفر مما يجعله صلبًا ويصعب تقليمه.</li>
-                <li>تفتت الأظافر وقد تنفصل عن الجلد تحتها.</li>
-                <li>التهاب حول الظفر مع ألم واحمرار في الحالات الشديدة.</li>
-              </ul>
-            </li>
-          </ul>
-          <div class="gallery-grid">
-            <figure class="gallery-item">
-              <img src="//upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Oncymycosis.JPG/250px-Oncymycosis.JPG" alt="سعفة الأظافر 1">
-              <figcaption>سعفة الأظافر 1</figcaption>
-            </figure>
-            <figure class="gallery-item">
-              <img src="https://media.gemini.media/img/portrait/2017/6/6/2017_6_6_10_56_32_45.jpg" alt="سعفة الأظافر 2">
-              <figcaption>سعفة الأظافر 2</figcaption>
-            </figure>
-          </div>
+     <div class="accordion-item">
+      <div class="accordion-header" onclick="toggleAccordion(this)">
+        <span><i class="fas fa-file-alt"></i> سعفة الأظافر</span>
+        <i class="fas fa-chevron-down accordion-icon"></i>
+      </div>
+      <div class="accordion-content">
+        <p><strong>التطور التدريجي:</strong></p>
+        <ul>
+          <li>مرحلة مبكرة: بقع بيضاء أو صفراء على طرف الظفر.</li>
+          <li>مرحلة متقدمة:
+            <ul>
+              <li>تغير لون الظفر إلى بني أو أسود.</li>
+              <li>تثخّن الظفر مما يجعله صلبًا ويصعب تقليمه.</li>
+              <li>تفتت الأظافر وقد تنفصل عن الجلد تحتها.</li>
+              <li>التهاب حول الظفر مع ألم واحمرار في الحالات الشديدة.</li>
+            </ul>
+          </li>
+        </ul>
+        <div class="gallery-grid">
+          <figure class="gallery-item">
+            <img src="//upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Oncymycosis.JPG/250px-Oncymycosis.JPG" alt="سعفة الأظافر 1">
+            <figcaption>سعفة الأظافر 1</figcaption>
+          </figure>
+          <figure class="gallery-item">
+            <img src="https://media.gemini.media/img/portrait/2017/6/6/2017_6_6_10_56_32_45.jpg" alt="سعفة الأظافر 2">
+            <figcaption>سعفة الأظافر 2</figcaption>
+          </figure>
         </div>
       </div>
+     </div>
       <!-- سعفة الوجه -->
       <div class="accordion-item">
         <div class="accordion-header active" onclick="toggleAccordion(this)">
