--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     :root {
       --primary: #1D3557;
       --secondary: #457B9D;
-      --accent: #E63946;
-      --light: #F1FAEE;
-      --dark: #1B263B;
+      --accent: #0FF; /* لمسة نيون زرقاء */
+      --glass-bg: rgba(255, 255, 255, 0.1);
+      --dark: #E0E0E0;
       --transition: all 0.4s ease;
     }
     /* إعادة تعيين القواعد الأساسية */
@@ -25,13 +25,13 @@
     }
     body {
       font-family: 'Cairo', sans-serif;
-      background: var(--light);
+      background: var(--primary);
       color: var(--dark);
       line-height: 1.8;
       overflow-x: hidden;
       scroll-behavior: smooth;
     }
-    /* خلفية متحركة مع جسيمات */
+    /* خلفية متحركة مع جسيمات نيون */
     .animated-bg {
       position: fixed;
       top: 0;
@@ -39,14 +39,14 @@
       width: 100%;
       height: 100%;
       z-index: -2;
-      background: radial-gradient(circle at 50% 50%, rgba(69,123,157,0.15), transparent 70%);
+      background: radial-gradient(circle at 50% 50%, rgba(0,255,255,0.1), transparent 70%);
       overflow: hidden;
     }
     .particle {
       position: absolute;
       background: var(--accent);
       border-radius: 50%;
-      opacity: 0.4;
+      opacity: 0.3;
       animation: float 12s infinite ease-in-out;
     }
     .particle:nth-child(1) { width: 8px; height: 8px; top: 20%; left: 10%; animation-delay: 0s; }
@@ -58,15 +58,16 @@
       0%, 100% { transform: translateY(0) scale(1); }
       50% { transform: translateY(-20px) scale(1.2); }
     }
-    /* ترويسة جذابة مع تأثيرات حركة */
+    /* ترويسة مستقبلية بتأثيرات زجاجية ولمسة نيون */
     .hero-section {
       position: relative;
-      background: linear-gradient(135deg, var(--primary), var(--secondary));
-      color: white;
+      background: linear-gradient(135deg, var(--secondary), var(--primary));
+      color: var(--accent);
       padding: 8rem 2rem 6rem;
       clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
       overflow: hidden;
       text-align: center;
+      border-bottom: 2px solid var(--accent);
       transition: var(--transition);
     }
     .hero-section:hover {
@@ -79,19 +80,21 @@
       right: -20%;
       width: 500px;
       height: 500px;
-      background: rgba(255,255,255,0.1);
+      background: var(--accent);
+      opacity: 0.1;
       border-radius: 50%;
+      filter: blur(30px);
       animation: pulse 8s infinite;
     }
     @keyframes pulse {
-      0%, 100% { transform: scale(0.9); opacity: 0.3; }
-      50% { transform: scale(1.1); opacity: 0.1; }
+      0%, 100% { transform: scale(0.9); opacity: 0.1; }
+      50% { transform: scale(1.1); opacity: 0.05; }
     }
     .hero-title {
       font-family: 'Orbitron', sans-serif;
-      font-size: 3rem;
+      font-size: 3.5rem;
       margin-bottom: 1.5rem;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.3);
+      text-shadow: 0 0 10px var(--accent);
       opacity: 0;
       transform: translateY(30px);
       animation: slideUp 0.8s forwards;
@@ -100,11 +103,12 @@
       to { opacity: 1; transform: translateY(0); }
     }
     .hero-subtitle {
-      font-size: 1.4rem;
+      font-size: 1.6rem;
       margin-bottom: 2rem;
       opacity: 0;
       animation: slideUp 1s forwards;
       animation-delay: 0.3s;
+      text-shadow: 0 0 5px var(--accent);
     }
     /* الحاوية الرئيسية */
     .container {
@@ -112,15 +116,15 @@
       margin: 0 auto;
       padding: 2rem;
     }
-    /* تصميم البطاقات بنمط زجاجي */
+    /* بطاقات بتأثير زجاجي */
     .card {
-      background: rgba(255,255,255,0.1);
-      border: 1px solid rgba(255,255,255,0.2);
+      background: var(--glass-bg);
+      border: 1px solid rgba(255, 255, 255, 0.2);
       backdrop-filter: blur(10px);
       border-radius: 20px;
       padding: 2.5rem;
       margin: 3rem 0;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.3);
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3);
       transform-style: preserve-3d;
       transition: var(--transition);
       cursor: pointer;
@@ -129,7 +133,7 @@
     }
     .card:hover {
       transform: translateY(-10px) rotateX(3deg) rotateY(-3deg);
-      box-shadow: 0 15px 40px rgba(0,0,0,0.5);
+      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.5);
     }
     .card::before {
       content: "";
@@ -145,7 +149,7 @@
     .card:hover::before {
       transform: scaleX(1);
     }
-    /* عناوين الأقسام المستقبلية */
+    /* عناوين الأقسام */
     .section-title {
       color: var(--accent);
       padding-right: 1.5rem;
@@ -166,25 +170,25 @@
     }
     p { margin-bottom: 1rem; }
     ul { margin: 1rem 0 1rem 2rem; }
-    /* نظام الأكورديون المستقبلية */
+    /* نظام الأكورديون */
     .accordion-item {
       margin: 2rem 0;
       border-radius: 15px;
       overflow: hidden;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     }
     .accordion-header {
-      background: rgba(255,255,255,0.1);
+      background: rgba(255, 255, 255, 0.1);
       padding: 1.5rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
       cursor: pointer;
       transition: var(--transition);
-      border-bottom: 1px solid rgba(255,255,255,0.2);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     }
     .accordion-header:hover {
-      background: rgba(255,255,255,0.2);
+      background: rgba(255, 255, 255, 0.2);
       transform: translateX(10px);
     }
     .accordion-header.active {
@@ -199,7 +203,7 @@
       max-height: 0;
       overflow: hidden;
       transition: max-height 0.4s ease;
-      background: rgba(0,0,0,0.5);
+      background: rgba(0, 0, 0, 0.5);
       padding: 0 1.5rem;
     }
     .accordion-content.show {
@@ -207,7 +211,7 @@
       margin-top: 0.5rem;
       padding-bottom: 1.5rem;
     }
-    /* معرض الصور الشبكي المستقبلية */
+    /* معرض الصور الشبكي */
     .gallery-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -220,7 +224,7 @@
       border-radius: 15px;
       overflow: hidden;
       border: 2px solid rgba(255,255,255,0.2);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
       transition: var(--transition);
     }
     figure.gallery-item:hover {
@@ -244,7 +248,7 @@
       background: rgba(0,0,0,0.2);
       color: var(--accent);
     }
-    /* شريط تمرير لعلاج الحالات المستقبلية */
+    /* شريط تمرير لعلاج الحالات */
     .treatment-slider {
       display: flex;
       overflow-x: auto;
@@ -255,11 +259,11 @@
     }
     .treatment-card {
       flex: 0 0 300px;
-      background: rgba(255,255,255,0.1);
+      background: rgba(255, 255, 255, 0.1);
       padding: 2rem;
       border-radius: 15px;
       scroll-snap-align: start;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
       transition: var(--transition);
       font-size: 0.9rem;
     }
@@ -305,7 +309,6 @@
     <!-- ترويسة الصفحة -->
     <section class="hero-section">
       <h1 class="hero-title">الفطريات الجلدية</h1>
-      <p class="hero-subtitle"> </p>
     </section>
 
     <!-- بطاقة: ما هي الفطريات الجلدية؟ -->
@@ -580,7 +583,7 @@
 
   <!-- تذييل الموقع -->
   <footer>
-    © 2023 <a href="https://www.linkedin.com/in/mostafa-felfla?utm_source=share&amp;utm_campaign=share_via&amp;utm_content=profile&amp;utm_medium=android_app" target="_blank" rel="noopener">Mostafa Shaker.NA</a>   
+    © 2023 <a href="https://www.linkedin.com/in/mostafa-felfla?utm_source=share&amp;utm_campaign=share_via&amp;utm_content=profile&amp;utm_medium=android_app" target="_blank" rel="noopener">Mostafa Shaker.NA</a> 
   </footer>
 
   <script>
@@ -593,7 +596,7 @@
           item.classList.remove('show');
           item.previousElementSibling.classList.remove('active');
           var otherIcon = item.previousElementSibling.querySelector('.accordion-icon');
-          if(otherIcon) {
+          if (otherIcon) {
             otherIcon.style.transform = 'rotate(0deg)';
           }
         }
@@ -610,6 +613,5 @@
       }
     }
   </script>
-  
 </body>
 </html>
