--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>الدليل التفاعلي للسعفة الجلدية - دليل شامل ومفصل</title>
+  <title>الدليل التفاعلي للسعفة الجلدية    </title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&amp;family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <!-- استدعاء Font Awesome للأيقونات -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -337,7 +337,7 @@
         <li>من شخص مصاب أو حيوانات أليفة (مثل القطط والكلاب).</li>
         <li>لمس أسطح ملوثة مثل أرضيات الصالات الرياضية أو أحواض السباحة.</li>
       </ul>
-      <p><strong><i class="fas fa-exclamation-triangle"></i> عوامل خطر الإصابة:</strong></p>
+      <p><strong><i class="fas fa-exclamation-triangle"></i> عوامل زيادة الإصابة:</strong></p>
       <ul>
         <li>الرطوبة والتعرق الزائد.</li>
         <li>ارتداء ملابس ضيقة أو أحذية غير مهواة.</li>
