--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
+<html lang="ar" dir="rtl"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>الدليل التفاعلي للسعفة الجلدية    </title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&amp;family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <title>الدليل التفاعلي للسعفة الجلدية - دليل شامل ومفصل</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&amp;family=Orbitron:wght@400;700&amp;display=swap" rel="stylesheet">
   <!-- استدعاء Font Awesome للأيقونات -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   
@@ -350,11 +348,11 @@
       <h2 class="section-title">الأعراض حسب نوع العدوى</h2>
       <!-- سعفة الرأس -->
       <div class="accordion-item">
-        <div class="accordion-header" onclick="toggleAccordion(this)">
+        <div class="accordion-header active" onclick="toggleAccordion(this)">
           <span><i class="fas fa-user-md"></i> سعفة الرأس</span>
-          <i class="fas fa-chevron-down accordion-icon" style="transform: rotate(0deg);"></i>
+          <i class="fas fa-chevron-down accordion-icon" style="transform: rotate(180deg);"></i>
         </div>
-        <div class="accordion-content">
+        <div class="accordion-content show">
           <p><strong>الفئة الأكثر إصابة:</strong> الأطفال بين 3-14 سنة.</p>
           <p><strong>الأعراض:</strong></p>
           <ul>
@@ -583,7 +581,7 @@
 
   <!-- تذييل الموقع -->
   <footer>
-    © 2023 <a href="https://www.linkedin.com/in/mostafa-felfla?utm_source=share&amp;utm_campaign=share_via&amp;utm_content=profile&amp;utm_medium=android_app" target="_blank" rel="noopener">Mostafa Shaker.NA</a> 
+    © 2023 <a href="https://www.linkedin.com/in/mostafa-felfla?utm_source=share&amp;utm_campaign=share_via&amp;utm_content=profile&amp;utm_medium=android_app" target="_blank" rel="noopener">Mostafa Shaker.NA</a> | تصميم وتطوير
   </footer>
 
   <script>
@@ -613,5 +611,5 @@
       }
     }
   </script>
-</body>
-</html>
+
+</body></html>
