--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
     <!-- ترويسة الصفحة -->
     <section class="hero-section">
       <h1 class="hero-title">الفطريات الجلدية</h1>
+      <p class="hero-subtitle">دليلك الشامل للتشخيص والعلاج والوقاية</p>
     </section>
 
     <!-- بطاقة: ما هي الفطريات الجلدية؟ -->
@@ -322,7 +323,7 @@
         </figure>
         <figure class="gallery-item">
           <img src="//upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Microsporum_canis_1.JPG/220px-Microsporum_canis_1.JPG" alt="فطريات جلدية 2">
-          <figcaption>تصوير ميكروسكوبي</figcaption>
+          <figcaption>عدوى جلدية شائعة</figcaption>
         </figure>
       </div>
     </div>
@@ -335,7 +336,7 @@
         <li>من شخص مصاب أو حيوانات أليفة (مثل القطط والكلاب).</li>
         <li>لمس أسطح ملوثة مثل أرضيات الصالات الرياضية أو أحواض السباحة.</li>
       </ul>
-      <p><strong><i class="fas fa-exclamation-triangle"></i> عوامل زيادة الإصابة:</strong></p>
+      <p><strong><i class="fas fa-exclamation-triangle"></i> عوامل خطر الإصابة:</strong></p>
       <ul>
         <li>الرطوبة والتعرق الزائد.</li>
         <li>ارتداء ملابس ضيقة أو أحذية غير مهواة.</li>
