--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>الدليل التفاعلي للسعفة الجلدية - دليل شامل ومفصل</title>
+  <title>الدليل التفاعلي للسعفة الجلدية    </title>
   <!-- استدعاء خطوط Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&amp;family=Orbitron:wght@400;700&amp;display=swap" rel="stylesheet">
   <!-- استدعاء Font Awesome للأيقونات -->
@@ -308,7 +308,7 @@
   <div class="container">
     <section class="hero-section">
       <h1 class="hero-title">الالتهابات الفطرية الجلدية</h1>
-      <p class="hero-subtitle">الدليل التفاعلي للتشخيص والعلاج والوقاية</p>
+     
     </section>
     
     <div class="card">
@@ -572,10 +572,9 @@
   </div>
   
   <footer>
-    <div class="footer-content">
-      <p>حقوق النشر © 2023 مصطفى شاكر. جميع الحقوق محفوظة.</p>
-    </div>
+    © 2023 <a href="https://www.linkedin.com/in/mostafa-felfla?utm_source=share&amp;utm_campaign=share_via&amp;utm_content=profile&amp;utm_medium=android_app" target="_blank" rel="noopener">Mostafa Shaker.NA</a> | تصميم وتطوير
   </footer>
+
   
   <script>
     function toggleAccordion(el) {
