--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>الدليل التفاعلي للسعفة الجلدية    </title>
+  <title>NOUR16    </title>
   <!-- استدعاء خطوط Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&amp;family=Orbitron:wght@400;700&amp;display=swap" rel="stylesheet">
   <!-- استدعاء Font Awesome للأيقونات -->
@@ -307,7 +307,7 @@
   
   <div class="container">
     <section class="hero-section">
-      <h1 class="hero-title">الالتهابات الفطرية الجلدية</h1>
+      <h1 class="hero-title">الفطريات الجلدية  </h1>
      
     </section>
     
